--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -30,6 +30,7 @@
 .searchInput {
     background-color: transparent;
     border: none;
+    outline: none;
     width: 100%;
     color: #eee;
     font-size: 16px;
